<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <ImageButton
        android:id="@+id/imageButton_equalizer"
        style="@style/menu_button"
        android:src="@drawable/equalizer"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_shine_star"
        style="@style/menu_star_cd"
        android:src="@drawable/shine_star"
        app:layout_constraintLeft_toRightOf="@id/imageButton_equalizer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_title"
        style="@style/header_title"
        android:text="@string/now_playing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/imageButton_cd"
        app:layout_constraintRight_toLeftOf="@id/imageButton_shine_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_cd"
        style="@style/menu_star_cd"
        android:src="@drawable/cd"
        app:layout_constraintRight_toLeftOf="@id/imageButton_share_symbol"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_share_symbol"
        style="@style/menu_button"
        android:src="@drawable/share_symbol"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/header_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/layout_margin_16dp"
        android:layout_marginLeft="@dimen/layout_margin_16dp"
        android:layout_marginRight="@dimen/layout_margin_16dp"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:background="@color/header_line"
        app:layout_constraintTop_toBottomOf="@id/textView_title" />

    <!-- Making album thumbnail image responsive for different screens by using "0dp" layout_width & layout_height -->

    <ImageView
        android:id="@+id/relativeLayout_album_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/layout_margin_16dp"
        android:src="@drawable/mb1000x1000"
        app:layout_constraintBottom_toTopOf="@+id/textView_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_line"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintWidth_default="wrap" />

    <!-- Using a frame image for a super simple way of creating a circular thumbnail -->

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/layout_margin_16dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@+id/textView_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_line"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/textView_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/artist_placeholder"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toTopOf="@+id/textView_song"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_album_image" />

    <TextView
        android:id="@+id/textView_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/song_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toTopOf="@+id/seconds_played"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_artist" />

    <TextView
        android:id="@+id/seconds_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played_time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintStart_toStartOf="@id/progress"
        app:layout_constraintTop_toBottomOf="@id/textView_song" />

    <TextView
        android:id="@+id/seconds_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintEnd_toEndOf="@id/progress"
        app:layout_constraintTop_toBottomOf="@id/textView_song" />


    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height_12dp"
        android:layout_marginHorizontal="@dimen/layout_margin_36dp"
        android:layout_marginLeft="@dimen/layout_margin_36dp"
        android:layout_marginRight="@dimen/layout_margin_36dp"
        android:max="100"
        android:progress="45"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_song" />


    <ImageButton
        android:id="@+id/imageButton_fast_forward"
        style="@style/forward_button"
        android:layout_margin="@dimen/layout_margin_24dp"
        android:layout_marginBottom="@dimen/layout_margin_36dp"
        android:scaleX="-1"
        android:src="@drawable/fast_forward_round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_pause"
        app:layout_constraintStart_toStartOf="@id/imageButton_shine_star"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

    <ImageButton
        android:id="@+id/imageButton_pause"
        android:layout_width="@dimen/play_pause_button_75dp"
        android:layout_height="@dimen/play_pause_button_75dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/layout_margin_24dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/pause_round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress" />


    <ImageButton
        android:id="@+id/imageButton_forward_back"
        style="@style/forward_button"
        android:layout_margin="@dimen/layout_margin_24dp"
        android:src="@drawable/fast_forward_round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imageButton_cd"
        app:layout_constraintStart_toEndOf="@+id/imageButton_pause"
        app:layout_constraintTop_toBottomOf="@+id/progress" />


</android.support.constraint.ConstraintLayout>
