<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <ImageButton
        android:id="@+id/imageButton_equalizer"
        style="@style/menu_button"
        android:src="@drawable/equalizer"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_shine_star"
        style="@style/menu_star_cd"
        android:src="@drawable/shine_star"
        app:layout_constraintLeft_toRightOf="@id/imageButton_equalizer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_title"
        style="@style/header_title"
        android:text="@string/this_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/imageButton_cd"
        app:layout_constraintRight_toLeftOf="@id/imageButton_shine_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_cd"
        style="@style/menu_star_cd"
        android:src="@drawable/cd"
        app:layout_constraintRight_toLeftOf="@id/imageButton_share_symbol"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_share_symbol"
        style="@style/menu_button"
        android:src="@drawable/share_symbol"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/header_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/layout_margin_16dp"
        android:layout_marginLeft="@dimen/layout_margin_16dp"
        android:layout_marginRight="@dimen/layout_margin_16dp"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:background="@color/header_line"
        app:layout_constraintTop_toBottomOf="@id/textView_title" />

    <!-- Gave up on a stubborn ConstraintLayout & quickly made a desired look with a nested layouts -->

    <LinearLayout
        android:id="@+id/album_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/relativeLayout_album_image"
                    android:layout_width="@dimen/album_thumbnail_160dp"
                    android:layout_height="@dimen/album_thumbnail_160dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/layout_margin_24dp"
                    android:src="@drawable/mb1000x1000" />

                <ImageView

                    android:layout_width="@dimen/album_thumbnail_160dp"
                    android:layout_height="@dimen/album_thumbnail_160dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/layout_margin_24dp"
                    android:src="@drawable/circle" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin_24dp">

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:text="@string/artist_placeholder"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/album_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:text="@string/album_placeholder"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_24dp"
            android:paddingLeft="@dimen/layout_margin_16dp"
            android:paddingRight="@dimen/layout_margin_16dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
